--- a/Detector.tex
+++ b/Detector.tex
@@ -14,7 +14,7 @@ Before the protons are injected into the LHC, they are pre-accelerated in variou
   \label{fig:AccComplex}
 \end{figure}
 \\
-The main goal of the LHC is to provide proton-proton (\pp) collisions to the experiments with centre of mass energies up to 14\tev in order to explore physics processes at novel energy regimes. For a certain process, the expected number of events $N$ is given by the product of the cross section $\sigma$ and the integral $L = \int \mathcal{L}  \, dt$ of the instantaneous luminosity $\cal L$ over time, such that
+The main goal of the LHC is to provide proton-proton (\pp) collisions to the experiments with centre-of-mass energies up to 14\tev in order to explore physics processes at novel energy regimes. For a certain process, the expected number of events $N$ is given by the product of the cross section $\sigma$ and the integral $L = \int \mathcal{L}  \, dt$ of the instantaneous luminosity $\cal L$ over time, such that
 \begin{equation}
   N = \sigma \cdot L . 
   \label{eq:lumi}
@@ -24,13 +24,13 @@ The luminosity is a machine parameter and can be expressed for beams with Gaussi
   \mathcal{L} = \frac{f n_{1} n_{2}}{4 \pi \sigma_{x} \sigma_{y}} \cdot F
   \label{eq:lumi}
 \end{equation}
-with the collision frequency $f$, the number of particles $n_1$ and $n_2$ contained in the two colliding bunches and the transverse beam sizes $\sigma_{x}$ ($\sigma_{y}$) in the horizontal (vertical) direction. In order to take the inclination of the two beams into account, the geometrical correction factor $F$ is introduced. With design conditions, the nominal peak luminosity of the LHC is $10^{34} \, \mathrm{cm}^{-2} \, \mathrm{s}^{-1}$. Since the total inelastic proton-proton cross-section at a centre of mass energy of 14\tev is around 100\,mb, as indicated in Fig.~\ref{fig:CrossSections}, the expected event rate is approximately $10^9$ events per second. \\
+with the collision frequency $f$, the number of particles $n_1$ and $n_2$ contained in the two colliding bunches and the transverse beam sizes $\sigma_{x}$ ($\sigma_{y}$) in the horizontal (vertical) direction. In order to take the inclination of the two beams into account, the geometrical correction factor $F$ is introduced. With design conditions, the nominal peak luminosity of the LHC is $10^{34} \, \mathrm{cm}^{-2} \, \mathrm{s}^{-1}$. Since the total inelastic proton-proton cross-section at a centre-of-mass energy of 14\tev is around 100\,mb, as indicated in Fig.~\ref{fig:CrossSections}, the expected event rate is approximately $10^9$ events per second. \\
 \begin{figure}[!t]
   \centering
   \begin{tabular}{c}
     \includegraphics[width=0.65\textwidth]{figures/crosssections2012_v5-1.pdf}
   \end{tabular}
-  \caption{Summary of cross sections for various standard model processes in proton-antiproton ($\sqrt{s} < 4$\tev) and proton-proton ($\sqrt{s} > 4$\tev) collisions as a function of the centre of mass energy. The right axis displays the correponding event rate at a luminosity of $\mathrm{10^{33}\,cm^{-2} s^{-1}}$~\cite{bib:stirling:pcom}.}
+  \caption{Summary of cross sections for various standard model processes in proton-antiproton ($\sqrt{s} < 4$\tev) and proton-proton ($\sqrt{s} > 4$\tev) collisions as a function of the centre-of-mass energy. The right axis displays the correponding event rate at a luminosity of $\mathrm{10^{33}\,cm^{-2} s^{-1}}$~\cite{bib:stirling:pcom}.}
   \label{fig:CrossSections}
 \end{figure}
 \\
@@ -201,13 +201,13 @@ In the two trigger stages, various different conditions can be tested in paralle
   \label{fig:lhc_data}
 \end{figure}
 The first operation of the LHC took place in September 2008. After a major cooling incident only a few days later requiring a longer technical stop, beams were circulated again in November 2009. The first collisions at a center of mass energy of 7\tev finally happened end of March 2010. 
-In the following running period in 2010, data corresponding to an integrated luminosity of 44.2\pbinv were delivered to the experiments with a maximum peak instantaneous luminosity of $2.05 \times 10^{32} \cm^{-2} \second^{-1}$. These data allowed studies of the detector performance and made first searches for new physics possible. The next data taking period performed during 2011 at the same centre of mass energy even delivered a total amount of 6.1\fbinv \pp collision data reaching a peak instantaneous luminosity of $3.5 \times 10^{33} \cm^{-2} \second^{-1}$. Following another technical shutdown during winter, the centre of mass energy was finally increased to 8\tev for the running period during 2012 and the peak luminosity reached values of up to $7.7 \times 10^{33} \cm^{-2} \second^{-1}$, which is already almost design conditions. In total, 23.3\fbinv of integrated luminosity \pp collisions were produced by the LHC operating at stable beam conditions. The evolution of the integrated luminosity versus days is illustrated in Fig.~\ref{fig:lhc_data} for data-taking periods in 2010, 2011 and 2012. Typically, these periods are referred to as \textit{LHC Run I}. During most of the operation in 2012, the LHC was circulating 1380 bunches per beam with a spacing of 50\,ns. The average bunch intensity, \ie the number of protons per bunch, was varying from $1.6$ to $1.7 \times 10^{11}$ exceeding even the design value~\cite{bib:lhc:lumi12, Lamont:2013cma}. 
+In the following running period in 2010, data corresponding to an integrated luminosity of 44.2\pbinv were delivered to the experiments with a maximum peak instantaneous luminosity of $2.05 \times 10^{32} \cm^{-2} \second^{-1}$. These data allowed studies of the detector performance and made first searches for new physics possible. The next data taking period performed during 2011 at the same centre-of-mass energy even delivered a total amount of 6.1\fbinv \pp collision data reaching a peak instantaneous luminosity of $3.5 \times 10^{33} \cm^{-2} \second^{-1}$. Following another technical shutdown during winter, the centre-of-mass energy was finally increased to 8\tev for the running period during 2012 and the peak luminosity reached values of up to $7.7 \times 10^{33} \cm^{-2} \second^{-1}$, which is already almost design conditions. In total, 23.3\fbinv of integrated luminosity \pp collisions were produced by the LHC operating at stable beam conditions. The evolution of the integrated luminosity versus days is illustrated in Fig.~\ref{fig:lhc_data} for data-taking periods in 2010, 2011 and 2012. Typically, these periods are referred to as \textit{LHC Run I}. During most of the operation in 2012, the LHC was circulating 1380 bunches per beam with a spacing of 50\,ns. The average bunch intensity, \ie the number of protons per bunch, was varying from $1.6$ to $1.7 \times 10^{11}$ exceeding even the design value~\cite{bib:lhc:lumi12, Lamont:2013cma}. 
 \begin{figure}[!t]
   \centering
   \begin{tabular}{c}
     \includegraphics[width=0.65\textwidth]{figures/pileup_pp_2012.pdf} 
   \end{tabular}
-  \caption{Mean number of interactions per bunch crossing in \pp collisions at a centre of mass energy of $\sqrt{s} = 8$\tev~\cite{bib:lhc:lumi12}.}
+  \caption{Mean number of interactions per bunch crossing in \pp collisions at a centre-of-mass energy of $\sqrt{s} = 8$\tev~\cite{bib:lhc:lumi12}.}
   \label{fig:lhc_pileup}
 \end{figure}
 In general, such conditions result in multiple interactions per bunch crossing known as \textit{pileup} (PU). Typically, two sources of pileup are distinguished: \textit{in-time} pileup (IT PU) and \textit{out-of-time} pileup (OOT PU). While IT PU is caused by additional \pp collisions occuring within the same bunch-crossing as the primary hard collision and leads to additional tracks in the tracking system and energy deposits in the calorimeters, OOT PU arises from \pp collisions in previous and following bunch crossings and contributes further energy deposits in the calorimeters to the hard interaction due to the finite signal decay time in the calorimeters. An overview of the pileup profile in collision data taken in 2012 is given in Fig.~\ref{fig:lhc_pileup}. Here, the mean number of interactions per bunch crossing is illustrated with the mean of this distribution located at 21. Dedicated techniques in order to mitigate effects from pileup have been developed of which some are discussed in Chap.~\ref{chap:Objects}.
