--- a/Introduction.tex
+++ b/Introduction.tex
@@ -1,10 +1,10 @@
 The current knowledge and understanding of the fundamental particles and interactions between them are summarized in the standard model (SM) of particle physics. The SM, which has been introduced in the early 1970's, is to date a very successful theory, as it was able to predict new particles in the past and is tested to very high precision. However, there are several fundamental questions still unanswered, like the origin of dark matter or the accommodation of large radiative corrections to the Higgs boson mass. One of such theories, which goes beyond the standard model and could provide solutions to some of these problems, is supersymmetry (SUSY). In general, there are several opportunities to investigate if supersymmetry is realised in nature. However, large parts of the SUSY parameter space can be best explored in collider experiments. \\
-The Large Hadron Collider (LHC) located at CERN\footnote{\textit{European Organization for Nuclear Research} near Geneva, Suisse} is currently the most powerful particle accelerator and provides proton-proton collisions at a centre of mass energy of up to $\sqrt{s} = 8$\tev to date. In order to further investigate the SM and search for new physics beyond, the CMS experiment has been built. The CMS experiment is a particle detector designed to analyse particle collisions delivered by the LHC and in this thesis studies are presented that are based on data recorded by this experiment. \\ 
+The Large Hadron Collider (LHC) located at CERN\footnote{\textit{European Organization for Nuclear Research} near Geneva, Suisse} is currently the most powerful particle accelerator and provides proton-proton collisions at a centre-of-mass energy of up to $\sqrt{s} = 8$\tev to date. In order to further investigate the SM and search for new physics beyond, the CMS experiment has been built. The CMS experiment is a particle detector designed to analyse particle collisions delivered by the LHC and in this thesis studies are presented that are based on data recorded by this experiment. \\ 
 Many SM and new physics processes, like SUSY, which are subject to the LHC physics program, manifest in final states containing jets -- the experimental signature of quarks and gluons. Thus, it is crucial to have a precise knowledge of jet-related quantities, like the jet transverse-momentum resolution. This can be measured utilizing events with a momentum balance in the transverse plane, like $\gamma$ + jet, $Z$ + jet or dijet events. In this thesis, a measurement of the jet transverse-momentum resolution in proton-proton collisions at $\sqrt{s} = 8$\tev using dijet events is performed. These events are especially suited as they are produced at a high rate and enable a measurement with a good detector coverage. In contrast to previous analyses, which have been carried out at $\sqrt{s} = 7$\tev, the measurement presented here provides an improved estimate of statistical and systematic uncertainties and has been extended such that the resolution in the forward part of the detector can be determined with higher precision. \\
-In the second part of the thesis, the detailled knowledge about jets and their resolution is exploited in a search for new physics targeting decays of supersymmetric particles. This analysis is also based on proton-proton collision data recorded at $\sqrt{s} = 8$\tev and makes use of events with missing transverse energy and several hard jets. Previous versions of this analysis have been performed at $\sqrt{s} = 7$\tev and were especially sensitive to supersymmetric models describing the production of gluinos as well as first and second generation squarks. The analysis presented here is extended to final states with high jet multiplicities, in order to be in addition sensitive to gluino-mediated production of third generation squarks. A key feature in this analysis is a precise prediction of standard model background contributions. Due to large theoretical uncertainties, especially background events from QCD multijet processes are difficult to model. These arise from mismeasured jets and decays of heavy-flavour quarks. In this thesis, a method relying on the jet-\pt resolution to estimate QCD background contributions is presented and special considerations to correctly predict high jet multiplicity events are discussed.  \\
-Since analyses of $\sqrt{s} = 8$\tev data exclude gluino and light-flavour squark masses below around 1\tev, it is of particular interest to investigate third generation squarks which have weaker mass limits. Especially, the next run period of the LHC starting in 2015 at a centre of mass energy of $\sqrt{s} = 13$\tev provides ideal conditions to further explore direct production of top squarks up to the TeV mass range. In this thesis, various analysis strategies for a search for top squarks at $\sqrt{s} = 13$\tev are discussed. Special emphasis is put on the study of several kinematic variables and the application of jet substructure tools. \\ 
+In the second part of the thesis, the detailled knowledge about jets and their resolution is exploited in a search for new physics targeting decays of supersymmetric particles. This analysis is also based on proton-proton collision data recorded at $\sqrt{s} = 8$\tev and makes use of events with missing transverse energy and several hard jets. Previous versions of this analysis have been performed at $\sqrt{s} = 7$\tev and were especially sensitive to supersymmetric models describing the production of gluinos as well as first and second generation squarks. The analysis presented here is extended to final states with high jet multiplicities, in order to be in addition sensitive to gluino-mediated production of third generation squarks. A key feature in this analysis is a precise prediction of standard model background contributions. Due to large theoretical uncertainties, especially background events from QCD multijet processes are difficult to model. These arise from mismeasured jets and decays of heavy-flavour quarks. In this thesis, a method relying on the jet-\pt response to estimate QCD background contributions is presented and special considerations to correctly predict high jet multiplicity events are discussed.  \\
+Since analyses of $\sqrt{s} = 8$\tev data exclude gluino and light-flavour squark masses below around 1\tev, it is of particular interest to investigate third generation squarks which have weaker mass limits. Especially, the next run period of the LHC starting in 2015 at a centre-of-mass energy of $\sqrt{s} = 13$\tev provides ideal conditions to further explore direct production of stop quarks up to the TeV mass range. In this thesis, various analysis strategies for a search for stop quarks at $\sqrt{s} = 13$\tev are discussed. Special emphasis is put on the study of several kinematic variables and the application of jet substructure tools. \\ 
 \\
-This thesis is organized as follows:
+The main focus of the work documented here is on the measurement of the jet transverse-momentum resolution, the estimation of QCD background contributions to the search for new physics based on final states with jets and missing energy and the propect studies for stop quark searches. This thesis is organized as follows:
 \begin{description}
  \item \textbf{Chapter 2:} A short introduction to the phenomenology of the standard model as well as to supersymmetry is given. Furthermore, current indirect and direct constraints from collider experiments on supersymmetric models are discussed.
  \item \textbf{Chapter 3:} This chapter provides an overview of the CMS experiment at the LHC including a discussion of data taking at the LHC up to date.
@@ -12,6 +12,6 @@ This thesis is organized as follows:
  \item \textbf{Chapter 5:} In this chapter, an introduction to the reconstruction of objects recorded in the particle collisions is given. Furthermore, dedicated algorithms to identify specific particle decays are discussed.
  \item \textbf{Chapter 6:} A measurement of the jet transverse-momentum resolution using dijet event topologies is explained. This measurement is performed for \pp collision data at $\sqrt{s} = 8$\tev as well as simulated events.
  \item \textbf{Chapter 7:} A search for supersymmetry in final states containing several hard jets and missing transverse momentum at $\sqrt{s} = 8$\tev is reviewed. Special emphasis is put on the determination of the QCD multijet background.
- \item \textbf{Chapter 8:} Based on simulated events, prospect studies for a search for top squarks at $\sqrt{s} = 13$\tev are discussed.
+ \item \textbf{Chapter 8:} Based on simulated events, prospect studies for a search for stop quarks at $\sqrt{s} = 13$\tev are discussed.
  \item \textbf{Chapter 9:} This chapter provides a short summary of the thesis and main results.
 \end{description}
