--- a/RA2.tex
+++ b/RA2.tex
@@ -1,4 +1,4 @@
-The search for supersymmetric particles is among the most important goals of the LHC physics program. As discussed in Sec.~\ref{subsubsec:susy_7tev_results}, searches performed at $\sqrt{s} = 7$\tev have constrained the allowed parameter space for light-flavour squarks and gluinos already up to around 800\gev and 1\tev for light LSP masses, respectively. However, the increased centre of mass energy from 7\tev to 8\tev and the recorded dataset, which is around four times larger than at 7\tev, provide the opportunity to extend the reach of such searches into entirely unexplored parameter regions. In Fig.~\ref{fig:susy_theory_xs}, the theory cross section for the production of supersymmetric particles is shown as a function of the SUSY particle mass. The $y$-axis on the right indicates how many events are expected in 20\fbinv of \pp collision data at the LHC at $\sqrt{s}=8$\tev. 
+The search for supersymmetric particles is among the most important goals of the LHC physics program. As discussed in Sec.~\ref{subsubsec:susy_7tev_results}, searches performed at $\sqrt{s} = 7$\tev have constrained the allowed parameter space for light-flavour squarks and gluinos already up to around 800\gev and 1\tev for light LSP masses, respectively. However, the increased centre-of-mass energy from 7\tev to 8\tev and the recorded dataset, which is around four times larger than at 7\tev, provide the opportunity to extend the reach of such searches into entirely unexplored parameter regions. In Fig.~\ref{fig:susy_theory_xs}, the theory cross section for the production of supersymmetric particles is shown as a function of the SUSY particle mass. The $y$-axis on the right indicates how many events are expected in 20\fbinv of \pp collision data at the LHC at $\sqrt{s}=8$\tev. 
 \begin{figure}[!h]
   \centering
   \begin{tabular}{c}
@@ -16,7 +16,7 @@ After the description of the event selection (Sec.~\ref{sec:RA2_sel}), it is dis
 \label{sec:RA2_sel}
 \subsection{Data Samples}
 \label{subsec:RA2_samples_trigger}
-The analysis is based on \pp collision data recorded with the CMS detector at a centre of mass energy of $\sqrt{s} = 8$\tev. This corresponds to an integrated luminosity of 19.5\fbinv for all sub-detectors fully functional. \\
+The analysis is based on \pp collision data recorded with the CMS detector at a centre-of-mass energy of $\sqrt{s} = 8$\tev. This corresponds to an integrated luminosity of 19.5\fbinv for all sub-detectors fully functional. \\
 In addition, it is made use of several simulated samples describing SM background processes. These are especially employed in the validation of the background estimation methods described in Sec.~\ref{sec:RA2_Non-QCD} and~\ref{subsec:RA2_QCD}. The standard model processes for \ttbar, \WJets, \ZJets, $\gamma + \mathrm{{jets}}$ and QCD multijet events are generated with the \madgraph~\cite{Alwall:2014hca} generator at leading order and are interfaced with the parton-shower model in \pythia 6.4.24~\cite{Sjostrand:2006za}. While \ttbar events are generated with up to three additional jets, other background samples contain up to four additional jets. The samples are scaled to cross-section predictions at next-to-leading order or next-to-next-to-leading order, when available~\cite{Kidonakis:2010dk, Melnikov:2006kv}. The events are processed with the full detector simulation. 
 %\begin{table}[!t]
 %\fontsize{9 pt}{1.2 em}
@@ -805,8 +805,8 @@ Comparable analyses have also been performed by the ATLAS experiment~\cite{Aad:2
 In general, the SUSY search presented in this thesis as well as other measurements, as discussed in Sec.~\ref{subsec:RA2_comp}, pushed the mass limits of supersymmetric particles closer to the TeV range than the 7\tev analyses or even beyond. However, most of the interpretations are in fact presented in simplified models assuming 100\% branching fraction of that specific decay which is most probably is not realised in nature. Scaling the respective branching ratios down, typically results in much weaker mass limits. \\
 Therefore, it is also interesting to look at more realistic SUSY models, \eg the CMSSM again. In addition to direct interpretations of searches in the CMSSM, which for instance in case of the ATLAS experiment, result in exclusions of $m_{1/2} \lesssim 800$\gev for $m_{0} \lesssim 1$\tev and $m_{1/2} \lesssim 600$\gev for $m_{0} \lesssim 6$\tev ($\mathrm{tan} \, \beta = 30$, $A_0 = -2m_0$, $\mu >0$)~\cite{bib:ATLAS:PhysicsResultsSUS}, also global fits to constrain the respective CMSSM parameters are performed (\cf for instance~\cite{Bechtle:2012zk, Buchmueller:2013rsa}). Typically, these fits do not only consider direct searches from the LHC, but also use constraints from low-energy precision observables, flavour measurements or the cosmological cold dark matter density. In general, in these fits a growing tension between low-energy observables, the non-observation of SUSY at the LHC and the CMSSM is observed and consequently best fit values are pushed up to large values of $m_0/m_{1/2}$ which is in contradiction to expectations for natural SUSY. \\
 However, as discussed in Sec.~\ref{subsubsec:susy_7tev_results} the interpretation of search results only within the CMSSM and simplified models is not considered as sufficient anyway. Thus, also models beyond the CMSSM catch growing attention. One of these is the pMSSM which has been introduced in Sec.~\ref{subsubsec:susy_7tev_results} as well. An interpretation of SUSY searches, comprising especially the analysis presented in this thesis, in the context of the pMSSM, has been performed by the CMS experiment~\cite{CMS-PAS-SUS-13-020}. In order to investigate the impact of direct searches at CMS, a global Bayesian analysis~\cite{robert2001bayesian, o2004bayesian} is performed that furthermore also includes pre-CMS data and indirect measurements. Here, probability distributions prior and posterior to the CMS searches are investigated. In Fig.~\ref{fig:pMSSM}, example distributions of such prior and posterior probability distributions for gluino and squark masses are illustrated. The distributions exhibit that the data disfavours pMSSM scenarios with $\tilde{g}$ masses below 1200\gev and scenarios with $\tilde{u}_L,\tilde{c}_L$ masses below 1000\gev. Consequently, also in this interpretation of the analysis presented here, excluded mass ranges reach or exceed already the 1\tev mark, such that the impression arises that natural SUSY is under increasing pressure. \\
-However, as discussed in Sec.~\ref{sec:susy}, especially the supersymmetric partner of the top quark should not be too heavy, if SUSY is supposed to provide a solution to the hierarchy problem. This is still feasible, since mass limits for third generation squarks are typically weaker than for light-flavour squarks. A summary of searches performed with the CMS experiment at a centre of mass energy of $\sqrt{s} = 8$\tev for direct production of top squark pairs, is illustrated in Fig.~\ref{fig:8TeV_stop_limits}.
-\begin{figure}[!h]
+However, as discussed in Sec.~\ref{sec:susy}, especially the supersymmetric partner of the top quark should not be too heavy, if SUSY is supposed to provide a solution to the hierarchy problem. This is still feasible, since mass limits for third generation squarks are typically weaker than for light-flavour squarks. A summary of searches performed with the CMS experiment at a centre-of-mass energy of $\sqrt{s} = 8$\tev for direct production of top squark pairs, is illustrated in Fig.~\ref{fig:8TeV_stop_limits}.
+\begin{figure}[!t]
   \centering
   \begin{tabular}{c}
                 \includegraphics[width=0.49\textwidth]{figures/T2tt_ICHEP2014_All.pdf} 
@@ -815,5 +815,5 @@ However, as discussed in Sec.~\ref{sec:susy}, especially the supersymmetric part
   \label{fig:8TeV_stop_limits}
 \end{figure}
 \\
-Here, top squarks with masses between 200--750\gev have been excluded for LSP masses below around 200\gev. This corresponds to a generic tuning (as introduced in Sec.~\ref{subsec:natural_susy}) of $\Delta \lesssim 20$. Although this exceeds the traditional value of $\Delta \lesssim 10$ already, values up to $\Delta \lesssim 100$ are often considered acceptable to date~\cite{Craig:2013cxa}. Consequently, a stop mass up to around 1\tev is considered eligible and a wide range of the parameter space is still not investigated. Since the LHC starts a second run period in 2015 with an increased centre of mass energy of $\sqrt{s} = 13$\tev, this mass region up to 1\tev can be further studied.\\
+Here, top squarks with masses between 200--750\gev have been excluded for LSP masses below around 200\gev. This corresponds to a generic tuning (as introduced in Sec.~\ref{subsec:natural_susy}) of $\Delta \lesssim 20$. Although this exceeds the traditional value of $\Delta \lesssim 10$ already, values up to $\Delta \lesssim 100$ are often considered acceptable to date~\cite{Craig:2013cxa}. Consequently, a stop mass up to around 1\tev is considered eligible and a wide range of the parameter space is still not investigated. Since the LHC starts a second run period in 2015 with an increased centre-of-mass energy of $\sqrt{s} = 13$\tev, this mass region up to 1\tev can be further studied.\\
 A feasibility study to search for direct stop quark pair-production at $\sqrt{s} = 13$\tev is presented in the next chapter based on simulated events,. Here, also techniques to identify boosted hadronically-decaying top quarks, as introduced in Chap.~\ref{chap:Objects}, emerging from the stop quark decays, are employed.
