--- a/Resolution.tex
+++ b/Resolution.tex
@@ -226,7 +226,7 @@ with $dy = y_{\mathrm{measured}} - y_{\mathrm{predicted}}$ and the covariance ma
 C_{i,j}(\sigma_{A_i},\sigma_{A_j}) = (\Delta \sigma_{A_i})^2 \cdot \frac{\sigma_{A_i}}{\sigma_{A_j}} \cdot \frac{n_i}{n_j} 
 \label{eq:jer_corr}
 \end{equation}
-with the number of events $n$ in that particular $\alpha$ interval.\footnote{The assumption that all events from $\alpha$ interval $i$ are also included in $\alpha$ interval $j$ is only almost true, since the asymmetry distributions are truncated to reject non-Gaussian components and some events might not fulfill this criterion.} A discussion regarding the derivation of that expression is summarized in App.~\ref{app:extrapol_corr}. The function minimization itself is performed with the Minuit package~\cite{Minuit}.   
+with the number of events $n$ in that particular $\alpha$ interval.\footnote{The assumption that all events from $\alpha$ interval $i$ are also included in $\alpha$ interval $j$ is only almost true, since the asymmetry distributions are truncated to reject non-Gaussian components and some events might not fulfill this criterion.} A discussion regarding the derivation of that expression is summarized in App.~\ref{app:extrapol_corr}~\cite{JOtt}. The function minimization itself is performed with the Minuit package~\cite{Minuit}.    
 \begin{figure}[!tp]
   \centering
   \begin{tabular}{cc}
@@ -623,7 +623,7 @@ The determined ratios vary from 1.06 to 1.40 and exceed the value of one in all 
 \label{subsec:jer_results_comparison}
 Earlier analyses using dijet events for data collected at $\sqrt{s}=7$\tev have obtained similar results showing data-to-simulation ratios greater than one. A complementary approach is followed using $\gamma +\rm{jet}$ events which offer a very precise opportunity to measure the jet resolution due to the excellent resolution of the photon energy. A comparison of the numbers derived in the context of this thesis to the latest results from dijet events obtained at $\sqrt{s}=7$\tev~\cite{thesis:Schroeder} and results for $\gamma +\rm{jet}$ measurements at $\sqrt{s}=8$\tev~\cite{CMS-AN-2013-179} are shown in Fig.~\ref{fig:result_comparison}.
 \\
-The results obtained from different methods and for the different centre of mass energies are well compatible. The main advantage of the dijet measurement presented in this thesis compared to the $\gamma +\rm{jet}$ analysis is that one obtains also results for the outermost $|\eta|$ region. In addition, the total uncertainties in the other $|\eta|$ regions are at a same accuracy or even slightly better. 
+The results obtained from different methods and for the different centre-of-mass energies are well compatible. The main advantage of the dijet measurement presented in this thesis compared to the $\gamma +\rm{jet}$ analysis is that one obtains also results for the outermost $|\eta|$ region. In addition, the total uncertainties in the other $|\eta|$ regions are at a same accuracy or even slightly better. 
 \\
 In comparison to the $\sqrt{s}=7$\tev results from dijet events, the total uncertainty could be significantly reduced by incorporating the correlation among the different inclusive $\alpha$ regions in the extrapolation procedure. In the previous analyses, the statistical uncertainties were underestimated by not considering the correlation. This effect was compensated by introducing a rather conservative systematic uncertainty on the extrapolation to zero additional jet activity. Since the treatment of the statistical uncertainty has been changed in this analysis, the estimation of systematic effects could be adjusted accordingly and lead to the overall reduced uncertainty.
 \begin{figure}[!t]
