--- a/Thesis.bib
+++ b/Thesis.bib
@@ -2730,9 +2730,11 @@ primaryClass   = "hep-ph"
  year          = {2008}
 }
 
-@misc{JOtt,
-  note = "J.~Ott, private communication",
-  year = {2013}
+@article{JOtt,
+  author = "J.~Ott",
+  note = "private communication (2014)",
+  journal = "",
+  year = {}
 }
 
 @misc{MSchrode,
