--- a/Thesis.tex
+++ b/Thesis.tex
@@ -76,6 +76,7 @@ a4paper
 \hyphenation{maximum-like-li-hood}
 \hyphenation{vor-ge-stel-lt}
 %\hyphenation{End-zu-st\"an-den}
+\hyphenation{si-mu-lier-ten}
 
 \input{definitions.tex}
 
