--- a/Theory.tex
+++ b/Theory.tex
@@ -232,7 +232,7 @@ Similarly, neutralinos and charginos are expected to be pair-produced via $Z/\ga
 Interpretations of combined results from all four experiments in the mSUGRA model lead to exclusion limits showing that $m_{1/2}$ has to be greater than about 100--200\gev over a range of $m_{0}$ up to the\tev-region for specific fixed other parameters. The lower limit on the LSP mass is found to be around 50\gev. 
 
 \subsubsection*{Tevatron} 
-The \tevatron accelerator made another SUSY parameter space accessible for searches, as the centre of mass energy exceeded that of \hera and \lep by at least one order of magnitude. A rich program of supersymmetric searches was enabled covering various final states of different lepton, photon or jet multiplicities. Of special interest is the search for coloured sparticles like squarks and gluinos, as \tevatron is a hadron collider. The expected decay topologies are very similar to those at the LHC and thus discussed in Sec.~\ref{subsec:susy_LHC_searches}. \\
+The \tevatron accelerator made another SUSY parameter space accessible for searches, as the centre-of-mass energy exceeded that of \hera and \lep by at least one order of magnitude. A rich program of supersymmetric searches was enabled covering various final states of different lepton, photon or jet multiplicities. Of special interest is the search for coloured sparticles like squarks and gluinos, as \tevatron is a hadron collider. The expected decay topologies are very similar to those at the LHC and thus discussed in Sec.~\ref{subsec:susy_LHC_searches}. \\
 Results from SUSY searches at the Tevatron have been interpreted in the context of mSUGRA and extended the LEP results in the parameter region of $m_{0} =$ 70--300\gev and $m_{1/2} =$ 125--165\gev. This allows to exclude gluinos below around 280--300\gev for all squark masses and squarks below $380$\gev independent of the gluino mass~\cite{CDFLimits, D0Limits, Abazov200934}. 
 
 \subsection{Searches at the LHC}
@@ -264,11 +264,11 @@ Some example diagrams for the production modes of such processes at parton level
       \includegraphics[width=0.495\textwidth]{figures/stop_xsec.pdf}
     \end{center}
   \end{minipage}
-  \caption{SUSY production cross sections of processes $pp \rightarrow \tilde{g}\tilde{g}$ (\textit{top left}), $pp \rightarrow \tilde{q}\tilde{q}$ (\textit{top right}) and $pp \rightarrow \tilde{t}\tilde{t}$ (\textit{bottom}) displayed for different sparticle masses shown as a function of the centre of mass energy~\cite{Kramer:2012bx, Borschensky:2014cia}.}
+  \caption{SUSY production cross sections of processes $pp \rightarrow \tilde{g}\tilde{g}$ (\textit{top left}), $pp \rightarrow \tilde{q}\tilde{q}$ (\textit{top right}) and $pp \rightarrow \tilde{t}\tilde{t}$ (\textit{bottom}) displayed for different sparticle masses shown as a function of the centre-of-mass energy~\cite{Kramer:2012bx, Borschensky:2014cia}.}
   \label{fig:susy_cross_sec}
 \end{figure}
 \\
-Most recent SUSY cross section calculations consider higher order corrections caused, \eg by quark radiation or gluon loops, typically up to next-to-leading order (NLO). Production cross sections for the processes $pp \rightarrow \tilde{g}\tilde{g}$, $pp \rightarrow \tilde{q}\tilde{q}$ and $pp \rightarrow \tilde{t}\tilde{t}$ are illustrated in Fig.~\ref{fig:susy_cross_sec} for different sparticle masses as function of the centre of mass energy. For instance, for a gluino with a mass of 1.5\tev, the gluino pair-production cross section is expected to be at the order of $10^{-4}$\pb at $\sqrt{s} = 7$\tev. Typically, the relative size of the different channels depends on the respective squark and gluino masses as well as the energy of the collider. While for small masses of SUSY particles or large collider energies the cross sections of gluinos are dominant, squark-pair production (and also associated squark-gluino production) are favoured in case of large SUSY masses and low collider energies. 
+Most recent SUSY cross section calculations consider higher order corrections caused, \eg by quark radiation or gluon loops, typically up to next-to-leading order (NLO). Production cross sections for the processes $pp \rightarrow \tilde{g}\tilde{g}$, $pp \rightarrow \tilde{q}\tilde{q}$ and $pp \rightarrow \tilde{t}\tilde{t}$ are illustrated in Fig.~\ref{fig:susy_cross_sec} for different sparticle masses as function of the centre-of-mass energy. For instance, for a gluino with a mass of 1.5\tev, the gluino pair-production cross section is expected to be at the order of $10^{-4}$\pb at $\sqrt{s} = 7$\tev. Typically, the relative size of the different channels depends on the respective squark and gluino masses as well as the energy of the collider. While for small masses of SUSY particles or large collider energies the cross sections of gluinos are dominant, squark-pair production (and also associated squark-gluino production) are favoured in case of large SUSY masses and low collider energies. 
 
 \subsubsection*{Decay Channels}
 \label{subsubsec:susy_decay}
@@ -299,7 +299,7 @@ The top quark decays almost exclusively into a $W$ boson and a $b$ quark. Experi
 
 \subsubsection*{Results at $\mathbf{\sqrt{s} = 7}$\tev}
 \label{subsubsec:susy_7tev_results}
-As soon as first collision data have been obtained at the LHC at a centre of mass energy of $\sqrt{s} = 7$\tev, searches for supersymmetry were carried out based on various final states. Like for previous collider experiments, however, no hints of new physics have been found and the results were interpreted in various SUSY models by setting exclusion limits~\cite{bib:ATLAS:PhysicsResultsSUS, bib:CMS:PhysicsResultsSUS}. In Fig.~\ref{fig:CMSSM_7TeV}, interpretations of CMS searches for supersymmetry, based on various different hadronic and leptonic final states, are summarized in the context of the CMSSM. 
+As soon as first collision data have been obtained at the LHC at a centre-of-mass energy of $\sqrt{s} = 7$\tev, searches for supersymmetry were carried out based on various final states. Like for previous collider experiments, however, no hints of new physics have been found and the results were interpreted in various SUSY models by setting exclusion limits~\cite{bib:ATLAS:PhysicsResultsSUS, bib:CMS:PhysicsResultsSUS}. In Fig.~\ref{fig:CMSSM_7TeV}, interpretations of CMS searches for supersymmetry, based on various different hadronic and leptonic final states, are summarized in the context of the CMSSM. 
 \begin{figure}[!tp]
   \centering 
   \begin{tabular}{cc}
@@ -322,7 +322,7 @@ Thus, results of SUSY searches are, in addition to interpretations in the CMSSM,
  \\
 However, interpretations in simplified models typically target only well-defined isolated SUSY topologies and thus do not account for all possible decay patterns in the MSSM. Consequently, also interpretations in more general models are desirable. One such example of a more generic SUSY model is the pMSSM~\cite{Djouadi:1998di}. The pMSSM is a 19-parameter realization of the MSSM and captures most of the features of general $R-$parity conserving SUSY models and covers a wide diversity of possible SUSY topologies. The MSSM is constrained by assuming that there is no new source of $CP$-violation, that no flavour changing neutral currents occur and that the first two sfermion generations are degenerate. Interpretations of CMS SUSY searches performed at $\sqrt{s} = 7$\tev within the pMSSM are published in~\cite{CMS-PAS-SUS-12-030}. A discussion of updated results follows in Sec.~\ref{sec:susy_status}.
 \\
-Although the SUSY parameter space has been investigated already extensively with the LHC data obtained at $\sqrt{s} = 7$\tev and exclusion limits on sparticle masses enter the TeV range, searches for supersymmetry stay a very important field within the CMS experiment also for $\sqrt{s} = 8$\tev. As seen already in Fig.~\ref{fig:susy_cross_sec}, production cross sections are expected to largely increase for increasing centre of mass energies. In particular, gluino and light-flavour squark production cross sections profit a lot from the collider energy increase, such that a new parameter space is accessible. Thus, in particular searches for those sparticles based on final states containing several hard jets and high values of missing transverse momentum are of major interest for analyses of the LHC $\sqrt{s} = 8$\tev data.   
+Although the SUSY parameter space has been investigated already extensively with the LHC data obtained at $\sqrt{s} = 7$\tev and exclusion limits on sparticle masses enter the TeV range, searches for supersymmetry stay a very important field within the CMS experiment also for $\sqrt{s} = 8$\tev. As seen already in Fig.~\ref{fig:susy_cross_sec}, production cross sections are expected to largely increase for increasing centre-of-mass energies. In particular, gluino and light-flavour squark production cross sections profit a lot from the collider energy increase, such that a new parameter space is accessible. Thus, in particular searches for those sparticles based on final states containing several hard jets and high values of missing transverse momentum are of major interest for analyses of the LHC $\sqrt{s} = 8$\tev data.   
 
 
 
